--- a/lib/AUTHORS
+++ b/lib/AUTHORS
@@ -6,38 +6,75 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented GNU SASL Library.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Comment: This 0xB565716F key is used to sign releases of gsasl.
+URL: http://josefsson.org/key.txt
+Comment: This 0xB565716F key is used to sign releases of GNU SASL LIBRARY.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
 T5rhTFDfDcT9SO0eIlfKOraSRnVEHyDDH2PAgJFxyneFELcmLUQ66D+m8z+ziGro
 6bcDSBBDMRkHIX6/kH/vnevjqivIld+j8WTcVX+SArcKyzgQ58uMTrfQdLqzh6D9
-sE/838+ZPZkabmKKWMVWccoaUbWGYOcNwO0ABim0IVNpbW9uIEpvc2Vmc3NvbiA8
-amFzQGV4dHVuZG8uY29tPojYBBMBAgAiAhsDBAsHAwIDFQIDAxYCAQIeAQIXgAUC
-P6QrUQUJA7xyJgAKCRDtoh6UtWVxbwueBP4uh9ZEOuSjt2n5OpfuAablsrRzhlgP
-fluBMfjHNynEFsGjn81l81TCqStRln7wDUj95ZufSi3YvoYSFG1jffGMk/k2trgI
-NtT3kxaGkfns6dykBuV7Ki2wWqdJkTe1ibyai+RCqt+J1ldSUuHdfQZ5wALPJQRb
-4Hqi7M29azFHcfxbMLf3yGYyBuKC7eBVNVaR58UTFK6r0CX3T7eGuk8biEYEExEC
-AAYFAj1Y8r8ACgkQV5Mp08AbKiIX9wCfR2rMiXdKzZB95acA5YSQ4MLQyygAn1Nv
-7M36SAofR/73WjqlPpVAQ+fRiEwEExECAAwFAj1esHUFgwFXijYACgkQvLvElXGK
-klYZnQCeOXIzmEoZ5yOVNygphYmUwON/S8IAn32gWDyaTMpqyDcJEQeLdjcW7boS
-tCVTaW1vbiBKb3NlZnNzb24gPHNpbW9uQGpvc2Vmc3Nvbi5vcmc+iNgEEwECACIC
-GwMECwcDAgMVAgMDFgIBAh4BAheABQI/pCtUBQkDvHImAAoJEO2iHpS1ZXFvPREE
-/j3fX+cLxCCZNTjMhThGFujiT7ty4x1jVc91J6QOA+Jp+78NIIeyg3JTeR3WIv7/
-WFNzLKJXJEEcga+0ViPjoLfvGsHMAnwXqPYAxu1cDY4jId0bCYgoVlnfF9gwOWxe
-btotLpCiuXGL/168zEAXWJpPg6r2MfPhAKUJ9G8q52OOWJW3cObxoZ2gyXjuWOFt
-ygZ1vUAqP/8UGeZNdajHD5uIRgQTEQIABgUCPVjywgAKCRBXkynTwBsqImY3AKCS
-COO5LlNxmritUFY1i7VXBCUlZgCgll/6kE0G/NP3E6AdyzVwAzBPgUeITAQTEQIA
-DAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqSVleXAJ9NZKUvb/erk53fMFUwpUeClOjh
-qwCcC3Du9UQjCn2k+7LWgqNMH+huqW24qwQ81Qd7AQUA2PTaoT8RNkFDlX7UCOB9
-vaRFxrX+dN7l6QO+O0Mg7dVdjItEnaaYkJ+r4LXecI47HogsUGExRdDYGT0Dq7aZ
-8GkC4UKPXc3q2KWQ3ib3wj3qnCGm3IX/I249ydYLAzQyWqMW09wLB5vxhPi4yjet
-4FTGWmtYUlGzDb7+6VZilYRTty0vhFF4cVXlO2R+vgPxFMvUc7o8WGDnQ3iyWAiz
-kQAGKYjFBBgBAgAPAhsMBQI/pCt8BQkDvHIBAAoJEO2iHpS1ZXFvEeIE/ixQWhAC
-pnKjQZeTA7zcshH683NU/bBAjbOq7lJ51aWMXOdXExGJsBD0fyPtRJywMtSB4vrM
-F1WjKZlA0jBOxzxWaWpLvMwdwgkSiql8KTNActxIoijtu0e5GI3V+55Z+Cv/jsPD
-lzeYiob0cO6u/2todt6XVTyCIFKWjf6/5i/LdhXlw7J9gzrCwm28ITC4is3voTNh
-Uceqods6zDrk0qo=
-=1RsN
+sE/838+ZPZkabmKKWMVWccoaUbWGYOcNwO0ABim0JVNpbW9uIEpvc2Vmc3NvbiA8
+c2ltb25Aam9zZWZzc29uLm9yZz6I2AQTAQIAIgIbAwQLBwMCAxUCAwMWAgECHgEC
+F4AFAkFvxFYFCQWICykACgkQ7aIelLVlcW/IFAT/Tomqc4vu6gnKY/GMueY0L4KV
+5IXvYOQ7k5UYh2Iz+b071yTRe6Qzjj49aUlMbpgt74r/6cVGliqd7Ujo7E9GVYMu
+Goeq1HY8smywDgIj5gD968krc1ERef0Z0G2860hmSUX3kCMWNvO9YVoNuNf8LJUb
+TabMWEjwiDxzFQeEkhWM82ykYFFO0l7FUGAQJUVOuOFBPnQfm9e7Jb9cb2oDlIhG
+BBMRAgAGBQI9WPLCAAoJEFeTKdPAGyoiZjcAoJII47kuU3GauK1QVjWLtVcEJSVm
+AKCWX/qQTQb80/cToB3LNXADME+BR4hMBBMRAgAMBQI9XrB1BYMBV4o2AAoJELy7
+xJVxipJWV5cAn01kpS9v96uTnd8wVTClR4KU6OGrAJwLcO71RCMKfaT7staCo0wf
+6G6pbYhGBBMRAgAGBQJBAMqCAAoJEJ7XWD/BTrKCtF0An0TdUAVZO/3ruGGxUAah
++Ot3XB8eAKDKdkLqzEVxQyJrMCdVovSuuXauuohGBBMRAgAGBQJA/z+GAAoJEJb/
+mcQlwOwLvSgAn2CjJzD5pW2Q4ufy3uJnCwlJUPkrAJ9qjkNeJf3pZa2qll272nAi
+ZDsjaYhMBBIRAgAMBQJA4Fc9BYMAk7TsAAoJEMiB3UdK56tHLK8AoLS9u/53aY3s
+NvGxlWFPbQZiINhlAKChRSih7yQdqVY0ZES+A46IUnSK5IjYBBMBAgAiAhsDBAsH
+AwIDFQIDAxYCAQIeAQIXgAUCPr1HRAUJAtWOGQAKCRDtoh6UtWVxb3F2BP9Whe+A
+rZn6WlbpHF+37Rqr+KmXL2fLI0b+phneaieRvACsOmPD3jDpvxz/xVf8s49SJ2+a
+23IaiCA8Boyws9sBxn5N+yWhdYYjfDbH3JUOQz7BKN/9o8EAYuU8pmQtEN0q4+Qi
+NsU0a8qLAV3qmEOwLfkB4z4H+aDZxe/p7vIYP4QmzTn3ZQ0mYR5mxpc52pF82KVy
+NWWJvmcirPwKSckEiNgEEwECACICGwMECwcDAgMVAgMDFgIBAh4BAheABQI/pCtU
+BQkDvHImAAoJEO2iHpS1ZXFvPREE/j3fX+cLxCCZNTjMhThGFujiT7ty4x1jVc91
+J6QOA+Jp+78NIIeyg3JTeR3WIv7/WFNzLKJXJEEcga+0ViPjoLfvGsHMAnwXqPYA
+xu1cDY4jId0bCYgoVlnfF9gwOWxebtotLpCiuXGL/168zEAXWJpPg6r2MfPhAKUJ
+9G8q52OOWJW3cObxoZ2gyXjuWOFtygZ1vUAqP/8UGeZNdajHD5uI2AQTAQIAIgUC
+PSXPPQIbAwUJAeEzgAQLBwMCAxUCAwMWAgECHgECF4AACgkQ7aIelLVlcW+3cwT+
+KPAUkJI2hjUB8ISbcBfq9EpRuOLLQx16aypqNcXprBxshp4LCTfBWv0k6zW6y7b8
+BBAO/PSx/+ES/pzewxNiykPr5DOtExRVsubR+n6lFkrJpbW0778kig6Xyqw7Ch2R
+c9DsJgW9JmGGTF1TBU5rpS0vqQ50KNADLsMNBPN1wL8bEdA1VQ0XkpwFYLssw3qI
+C3R0AUQxpDPi3fsIer4MLLQhU2ltb24gSm9zZWZzc29uIDxqYXNAZXh0dW5kby5j
+b20+iNgEEwECACICGwMECwcDAgMVAgMDFgIBAh4BAheABQJBb8RUBQkFiAspAAoJ
+EO2iHpS1ZXFv8W4E/Ajt3JTsRb+C/YLCbcXupUVCEpb5o6IkIoJsPDyEMBn0wkWA
+OaCuDI2uO/tT826s2NQJRItychaSEDAwqUYZIXxxozlR9r2qd2hl8Uha/CRjNEjt
+WefvPLjaPTe0QIuJKGspCMvhmCsqaMhfVCxo+UC/21GIMyyxvHrTWrJhPw5fPJhF
+4WN8Lj8GniBG3L/xwxwcpm7+1aZT/91YbQDXzs+IRgQTEQIABgUCPVjyvwAKCRBX
+kynTwBsqIhf3AJ9HasyJd0rNkH3lpwDlhJDgwtDLKACfU2/szfpICh9H/vdaOqU+
+lUBD59GITAQTEQIADAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqSVhmdAJ45cjOYShnn
+I5U3KCmFiZTA439LwgCffaBYPJpMymrINwkRB4t2NxbtuhKIRgQTEQIABgUCQQDK
+fQAKCRCe11g/wU6ygvegAJ9cAzRBE2V+rw6AmHVBqVfDVIsllQCgoCgYAAAZvsXU
+c72NsrSjAgjyyx6IRgQTEQIABgUCQP8/dwAKCRCW/5nEJcDsC1uxAKC6gBDLFxVI
+90nAFw2HL0GkfuZTewCgzz7P/bYsbVpLh21vUj7mlHw4s0GITAQSEQIADAUCQOBX
+PQWDAJO07AAKCRDIgd1HSuerR2AIAKCp7WDpLQxo+R+bvYXyKhPWCGsoRwCfT3Sz
+w8ijOgtNX3dNNs0Hv3mqbI+I2AQTAQIAIgIbAwQLBwMCAxUCAwMWAgECHgECF4AF
+Aj69R0YFCQLVjhkACgkQ7aIelLVlcW8Y2QT+PjSaIJj37ijex+wJ/HBLkyydqWYV
+ZhuTPTVMLst6DQModRBj3Xi7UYlgg7lJ6tRxarVuF/eYW6Zv4jx5FePxKLBeAG+H
+4FRQH+ogIXeBlDx41X7L25wjSxxPhQ4CwBNMmSKckD84LdQiPrygbX8JQLsJ08Xu
+TzDG7740d0RotqxizGhYP0QJTD67VvffoQ0gLtB5chw7Pc9osT1+j4yizojYBBMB
+AgAiAhsDBAsHAwIDFQIDAxYCAQIeAQIXgAUCP6QrUQUJA7xyJgAKCRDtoh6UtWVx
+bwueBP4uh9ZEOuSjt2n5OpfuAablsrRzhlgPfluBMfjHNynEFsGjn81l81TCqStR
+ln7wDUj95ZufSi3YvoYSFG1jffGMk/k2trgINtT3kxaGkfns6dykBuV7Ki2wWqdJ
+kTe1ibyai+RCqt+J1ldSUuHdfQZ5wALPJQRb4Hqi7M29azFHcfxbMLf3yGYyBuKC
+7eBVNVaR58UTFK6r0CX3T7eGuk8biNgEEwECACIFAjzVBysCGwMFCQHhM4AECwcD
+AgMVAgMDFgIBAh4BAheAAAoJEO2iHpS1ZXFviPIE/RqtM3MxNqQOE7wEITTd3SKu
+7qwIUnapB6HhQAVfLwpnnJu1YnEVP9DvGfS5cq6Mn31xeG7LuJwNHXfBaREobbQi
+MqI2/3LNBo1Hfr6bnyaNm7VQOcZWbY9P1sQtiYpNWi6aLjhBaBTmWCrkpl9aGwDk
+FASpLm2n2TgIEGDfokLCNjEd+dbHKYDWFLIwo+aCY+bpoV34u/13eHmhNWz1ME64
+qwQ81Qd7AQUA2PTaoT8RNkFDlX7UCOB9vaRFxrX+dN7l6QO+O0Mg7dVdjItEnaaY
+kJ+r4LXecI47HogsUGExRdDYGT0Dq7aZ8GkC4UKPXc3q2KWQ3ib3wj3qnCGm3IX/
+I249ydYLAzQyWqMW09wLB5vxhPi4yjet4FTGWmtYUlGzDb7+6VZilYRTty0vhFF4
+cVXlO2R+vgPxFMvUc7o8WGDnQ3iyWAizkQAGKYjFBBgBAgAPAhsMBQJBb8TwBQkF
+iAt1AAoJEO2iHpS1ZXFv3DcFAJ2H2y8eE2tLAfpqHU79IOWxc62GeNrqOCjZBMBZ
+3uIgHWMfEHL0fE7glCLzKvPgePr6p8904J0R3d5klYha45hUkL60/jxFp1QDd5TT
+mYiQJO5RTSWOAXbXt86t0H9Ih+tuuEsau4+/xVZXee+n+rn4PIpLE3pW3lMTduaB
+pM8HvbjqW/UT/u3bRDBGvBCHf5buwkHBlqCjF1Hc7NVxdk8=
+=X3nT
 -----END PGP PUBLIC KEY BLOCK-----
 
 ----------------------------------------------------------------------
